[package]
name = "driverkit"
version = "0.16.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Reto Achermann <achreto@gmail.com>", "Erika Hunhoff <hunhoff.erika@gmail.com>", "Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
readme = "README.md"
description = "A driver framework defining standard types and interfaces for writing device drivers."
keywords = ["driver", "os", "framework"]
repository = "https://github.com/gz/rust-driverkit"
license = "MIT OR Apache-2.0"
edition = "2018"

[target.'cfg(target_family = "unix")'.dependencies]
mmap = "0.1.*"
libc = "0.2.*"
byteorder = "1.4"
matches = "0.1.8"

[dependencies]
x86 = "0.47"
log = "0.4"
custom_error = { version = "1.9", default-features = false, features = ["unstable"] }
bit_field = "0.10.1"
phf = { version = "0.10.0", default-features = false }

[build-dependencies]
pciid-parser = "0.4.0"
phf_codegen = "0.10.0"

[[bin]]
name = "testdrive"
path = "src/bin/testdrive.rs"
